--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "16.9.0",
     "react-native": "0.61.2",
+    "react-native-extended-stylesheet": "^0.12.0",
     "react-native-navigation": "^3.2.0-snapshot.524"
   },
   "devDependencies": {
