--- a/ios/dara/Info.plist
+++ b/ios/dara/Info.plist
@@ -38,7 +38,7 @@
 		</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -53,5 +53,14 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Vazir-Black.ttf</string>
+		<string>Vazir-Bold.ttf</string>
+		<string>Vazir-Light.ttf</string>
+		<string>Vazir-Medium.ttf</string>
+		<string>Vazir-Thin.ttf</string>
+		<string>Vazir.ttf</string>
+	</array>
 </dict>
 </plist>
