--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "16.9.0",
     "react-native": "0.61.2",
     "react-native-extended-stylesheet": "^0.12.0",
-    "react-native-navigation": "^3.2.0-snapshot.524"
+    "react-native-navigation": "^3.2.0-snapshot.524",
+    "react-native-typography": "^1.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
