--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-native": "0.61.2",
     "react-native-extended-stylesheet": "^0.12.0",
     "react-native-navigation": "^3.2.0-snapshot.524",
-    "react-native-typography": "^1.4.1"
+    "react-native-typography": "^1.4.1",
+    "react-native-vector-icons": "^6.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
@@ -23,6 +24,7 @@
     "@types/jest": "^24.0.18",
     "@types/react": "^16.9.5",
     "@types/react-native": "^0.60.19",
+    "@types/react-native-vector-icons": "^6.4.4",
     "@types/react-test-renderer": "^16.9.0",
     "babel-jest": "^24.9.0",
     "eslint": "^6.5.1",
